Actualizar enlace de navegación a la página de onboarding

--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
             inteligencia artificial cuántica y análisis predictivo en tiempo
             real.
           </p>
-            <a href="/pulse/onboarding.html" class="btn-primary">Start Building →</a>
+            <a href="pulse/onboarding.html" class="btn-primary">Start Building →</a>
         </div>
 
         <div class="bento-grid">
