--- a/pulse/index.html
+++ b/pulse/index.html
@@ -3591,7 +3591,7 @@
                                 They've invested in 3 similar startups in your stage and industry. 
                                 Perfect timing - they just closed a new $500M fund.
                             </p>
-                            <a href="/echo/index.html" class="btn btn-primary" style="width: 100%; margin-top: 1rem;">
+                            <a href="/mvp-xylence/echo/index.html" class="btn btn-primary" style="width: 100%; margin-top: 1rem;">
                                 View Full Dashboard →
                             </a>
                         </div>
