--- a/pulse/index.html
+++ b/pulse/index.html
@@ -1276,6 +1276,8 @@
           0 0 100px rgba(139, 92, 246, 0.1),
           inset 0 1px 0 0 rgba(255, 255, 255, 0.05);
         animation: modalSlideUp 0.5s cubic-bezier(0.34, 1.56, 0.64, 1);
+        max-height: 90dvh;
+        overflow-y: auto;
       }
 
       @keyframes modalSlideUp {
