Update "Para VCs" link to redirect to the pulse-vc.html page

--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
           <a href="#" class="nav-link">Explorar</a>
           <a href="#" class="nav-link">Tecnología</a>
           <a href="#" class="nav-link">Para Builders</a>
-          <a href="#" class="nav-link">Para VCs</a>
+          <a href="pulse/pulse-vc.html" class="nav-link">Para VCs</a>
           <a href="#" class="btn-primary">Launch App</a>
         </div>
       </div>
